# Sentiment-Analysis-for-Forex-Market

./: README.md  app.py  backtester.py  data_processor.py  pyproject.toml  sentiment_analyzer.py  setup.py  utils.py
.streamlit/: config.toml
forex_sentiment_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
